resolve overflow

--- a/public/js/assets/graph.css
+++ b/public/js/assets/graph.css
@@ -93,5 +93,4 @@ circle.selected:hover {
 }
 
 #react-view {
-  overflow-x: hidden;
 }
